# travel-events-analysis

./: .gitignore  CLAUDE.md  generate_html.py  pyproject.toml
docs/: index.html
notebooks/: exploration.ipynb
scripts/: README.md  com.portkeys.travel-dashboard.plist  update-dashboard.sh
travel_events/: __main__.py  analysis.py  cli.py  dashboard.py  loader.py
